# osc-evidence

./: .gitignore  CLAUDE.md  Introducing osc-evidence.txt  LICENSE  README.md  pyproject.toml
src/osc_evidence/: __init__.py  checkpoint_engine.py  cli.py  cmake_parser.py  conditional_tracker.py  gpl_scanner.py  interactive_menu.py  license_patterns.py  report_generator.py  symbol_table.py  translation_layer.py
src/osc_evidence/checkpoints/: __init__.py  base.py  cp01_gpl_flags.py  cp02_lgpl_linking.py  cp03_test_exclusion.py  cp04_proprietary_codec.py  cp05_gpl_lib_id.py  cp06_static_gpl_risk.py  cp07_install_scope.py  cp08_source_traceability.py  cp09_conditional_guards.py  cp10_license_vars.py  cp11_submodule_isolation.py  cp12_link_visibility.py  cp13_external_gpl_opts.py  cp14_compile_definitions.py  cp15_runtime_download.py
