[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osc-evidence"
version = "0.1.0"
description = "OSC GPL/LGPL compliance evidence generator — scans CMake projects and produces legal-grade Markdown reports"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.scripts]
osc-evidence = "osc_evidence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
